# Economic-Compass

./: .env.example  .gitignore  README.md  calibrate_all.py  check_collinearity.py  docker-compose.yml  model_stats.py  pyproject.toml  requirements.txt  test_simulator.py  train_all.py  train_recession.py
api/: main.py
api/routers/: analysis.py  lineage.py  metrics.py  pipeline.py
api/schemas/: responses.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: main.jsx  styles.css
dashboard/src/pages/: ConditionsPage.jsx  CorrelationPage.jsx  LineagePage.jsx  OverviewPage.jsx  RegimesPage.jsx  (+5 more)
data/: warehouse.duckdb
docker/: api.Dockerfile
ingestion/schemas/: raw.py
ingestion/sources/: fred.py
ml/artifacts/: CPIAUCSL_prophet.joblib  FEDFUNDS_prophet.joblib  GDP_prophet.joblib  HOUST_prophet.joblib  RSXFS_prophet.joblib  T10Y2Y_prophet.joblib  UNRATE_prophet.joblib  calibration_CPIAUCSL.json  calibration_FEDFUNDS.json  calibration_GDP.json  calibration_HOUST.json  calibration_RSXFS.json  calibration_T10Y2Y.json  calibration_UNRATE.json  recession_model.joblib
ml/calibration/: backtester.py
ml/conditions/: index.py
ml/correlation/: analyzer.py
ml/features/: engineering.py
ml/inference/: predictor.py
ml/recession/: model.py
ml/regime/: detector.py
ml/sahm/: indicator.py
ml/simulator/: engine.py
ml/taylor/: rule.py
ml/train/: trainer.py
monitoring/drift/: detector.py
monitoring/lineage/: tracker.py
pipeline/flows/: ingest_flow.py
pipeline/tasks/: common.py
transform/: .user.yml  dbt_project.yml  profiles.yml
(+5 files in other folders)
