[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-pipeline-platform"
version = "0.1.0"
description = "End-to-end data pipeline with drift detection and lineage tracking"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "pipeline*", "ml*", "monitoring*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
